# parallel-tensor-train

./: README.md  ptt.m
articles/: paralleltt.bib  paralleltt.tex
distImp/: compute-q.cpp  mpi-randomizedsvd.cpp  mpi-reduce.cpp  tensor.cpp
lapack-test/: lapack-headers.h
scalapack-examples/: CMakeLists.txt  dgemm.cpp  qrcp-example.cpp  rectm-dgemm.cpp  sqm-dgemm.cpp  svd-example.cpp
structured/: caller.m  computeError.m  findRank.m  findsuitableRank.m  findsuitableRankWithAccuracies.m  flatApproximationForTTDecomposition.m  helper_parallelTensorTrainCompression.m  helper_parallelTensorTrainCompression_h1_g.m  helper_parallelTensorTrainCompression_h1_ng.m  helper_parallelTensorTrainCompression_h2_g.m  helper_parallelTensorTrainCompression_h2_ng.m  helper_parallelTensorTrainCompression_h3_g.m  helper_parallelTensorTrainCompression_h3_gFixedRankQRCPSVD.m  helper_parallelTensorTrainCompression_h3_gFixedRankQRCPSVDTallSkinnySplit.m  helper_parallelTensorTrainCompression_h3_gFixedRankRandomizedSVD.m  helper_parallelTensorTrainCompression_h3_gFixedRankSVD.m  inverse_cube_function.m  inverse_penta_function.m  inverse_square_function.m  log_function.m  number_of_elements.m  parallelTensorTrainCompression.m  parallelTensorTrainCompressionLSBFixedRankQRCPSVD.m  parallelTensorTrainCompressionLSBFixedRankRandomizedSVD.m  parallelTensorTrainCompressionLSBFixedRankSVD.m  parallelTensorTrainCompression_h1_g.m  parallelTensorTrainCompression_h1_ng.m  parallelTensorTrainCompression_h2_g.m  parallelTensorTrainCompression_h2_ng.m  parallelTensorTrainCompression_h3_g.m  sin_function.m  (+11 more)
(+3 files in other folders)
